--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.username = root
-spring.datasource.password = !Nustiu123!
+spring.datasource.password = !Albatrom2303@
 spring.datasource.url=jdbc:mysql://localhost:3306/licenta
 thymeleaf.cache = false
 
-spring.resources.static-locations=classpath:/static/
+spring.web.resources.static-locations=classpath:/static/
 
 spring.servlet.multipart.max-request-size = 215MB
 spring.servlet.multipart.max-file-size = 200MB
